--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
-    "from pathlib import Path\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -38,96 +37,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import DataSetLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from train import DataSetLoader\n",
-    "from config import get_config\n",
-    "from transformer import Transformer\n"
+    "from config import get_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading raw dataset...\n",
-      "Creating tokenizers...\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\de.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\en.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Finding longest items...\n",
-      "Longest items found: de: 479, en: 466\n",
-      "Splitting dataset...\n"
-     ]
-    }
-   ],
-   "source": [
-    "config = get_config()\n",
-    "train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'DataSetLoader' has no attribute 'get_model'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_weights_file_path' from 'config' (d:\\Github\\SUMMIT\\src\\config.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mDataSetLoader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_model\u001b[49m(config, vocab_src\u001b[38;5;241m.\u001b[39mget_vocab_size(), vocab_tgt\u001b[38;5;241m.\u001b[39mget_vocab_size())\u001b[38;5;241m.\u001b[39mto(device)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'DataSetLoader' has no attribute 'get_model'"
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_weights_file_path\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'get_weights_file_path' from 'config' (d:\\Github\\SUMMIT\\src\\config.py)"
      ]
     }
    ],
    "source": [
-    "model = DataSetLoader.get_model(config, vocab_src.get_vocab_size(), vocab_tgt.get_vocab_size()).to(device)\n"
+    "from config import get_weights_file_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Github\\SUMMIT\\src\\train\\opus_books\\checkpoints\\00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config = get_config()\n",
-    "file_path = str(Path('.').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\n",
-    "print(file_path)\n"
+    "from transformer import Transformer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load pretrained weights\n",
-    "state = torch.load(file_path)"
+    "model_filename = get_weights_file_path(config, f\"5\")\n",
+    "state = torch.load(model_filename)\n",
+    "model.load_state_dict(state['model_state_dict'])\n"
    ]
   },
   {
@@ -136,7 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(state['model_state_dict'])"
+    "config = get_config()\n",
+    "train_dataloader, validation_dataloader, vocab_source_len, vocab_target_len = get_dataset(config)\n",
+    "model = get_model(config, vocab_source_len.get_vocab_size(), vocab_target_len.get_vocab_size().to(device))"
    ]
   }
  ],
