I dont use arch

--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,36 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from train import DataSetLoader\n",
     "from config import get_config\n",
-    "from transformer import Transformer\n"
+    "from transformer import Transformer\n",
+    "from transformer import TransformerBuilder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading raw dataset...\n",
-      "Creating tokenizers...\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\de.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\en.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Finding longest items...\n",
-      "Longest items found: de: 479, en: 466\n",
-      "Splitting dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "config = get_config()\n",
     "train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)"
@@ -75,23 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'DataSetLoader' has no attribute 'get_model'",
+     "ename": "NameError",
+     "evalue": "name 'build_transformer' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mDataSetLoader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_model\u001b[49m(config, vocab_src\u001b[38;5;241m.\u001b[39mget_vocab_size(), vocab_tgt\u001b[38;5;241m.\u001b[39mget_vocab_size())\u001b[38;5;241m.\u001b[39mto(device)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'DataSetLoader' has no attribute 'get_model'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mDataSetLoader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvocab_source\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_vocab_size\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvocab_target\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_vocab_size\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "File \u001b[1;32md:\\Github\\SUMMIT\\src\\train.py:71\u001b[0m, in \u001b[0;36mDataSetLoader.get_model\u001b[1;34m(config, vocab_source_len, vocab_target_len)\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_model\u001b[39m(config, vocab_source_len, vocab_target_len):\n\u001b[1;32m---> 71\u001b[0m \tmodel \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_transformer\u001b[49m(vocab_source_len, vocab_target_len, config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMAX_SUPPORTED_SENTENCE_TOKEN_LENGTH\u001b[39m\u001b[38;5;124m\"\u001b[39m], config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMAX_SUPPORTED_SENTENCE_TOKEN_LENGTH\u001b[39m\u001b[38;5;124m'\u001b[39m], d_model\u001b[38;5;241m=\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMODEL_DIMENSIONS\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     72\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m model\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'build_transformer' is not defined"
      ]
     }
    ],
    "source": [
-    "model = DataSetLoader.get_model(config, vocab_src.get_vocab_size(), vocab_tgt.get_vocab_size()).to(device)\n"
+    "model = DataSetLoader.get_model(config, vocab_source.get_vocab_size(), vocab_target.get_vocab_size()).to(device)\n"
    ]
   },
   {
