--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
+    "import tokenizer\n",
     "from pathlib import Path\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -38,14 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "opus_books\\checkpoints\\model_name\n",
       "D:\\Github\\SUMMIT\\src\n",
       "=== SUMMIT Training Process ===\n",
       "\n",
@@ -329,9 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading raw dataset...\n",
+      "Creating tokenizers...\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\de.json\n",
+      "Found existing tokenizer file, reusing it!\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\en.json\n",
+      "Found existing tokenizer file, reusing it!\n",
+      "Finding longest items...\n",
+      "Longest items found: de: 479, en: 466\n",
+      "Splitting dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "config = get_config()\n",
     "train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)"
@@ -339,11 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m TransformerBuilder\u001b[38;5;241m.\u001b[39mbuild_transformer(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mtokenizer_source\u001b[38;5;241m.\u001b[39mget_vocab_size(), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer_target\u001b[38;5;241m.\u001b[39mget_vocab_size(), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_tokens, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_tokens, \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMODEL_DIMENSIONS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNUM_ENCODER_BLOCKS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNUM_HEADS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDROPOUT\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "model = DataSetLoader.get_model(config, vocab_source.get_vocab_size(), vocab_target.get_vocab_size(), True, True, 512, 6, 8, 0.1, 2048).to(device)\n"
+    "model = TransformerBuilder.build_transformer(self.tokenizer_source.get_vocab_size(), self.tokenizer_target.get_vocab_size(), self.max_tokens, self.max_tokens, False, True, self.config[\"MODEL_DIMENSIONS\"], self.config[\"NUM_ENCODER_BLOCKS\"], self.config[\"NUM_HEADS\"], self.config[\"DROPOUT\"]).to(self.device)"
    ]
   },
   {
