--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import warnings\n",
     "import tokenizer\n",
     "from pathlib import Path\n",
+    "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -39,14 +40,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import DataSetLoader\n",
+    "from config import get_config\n",
+    "from transformer import Transformer\n",
+    "from transformer import TransformerBuilder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model(config):\n",
+    "\t\t# print some nice looking message\n",
+    "\t\tprint(\"=== SUMMIT Training Process ===\\n\")\n",
+    "\n",
+    "\t\tconfig = config\n",
+    "\t\tmax_tokens = int(config['MAX_SUPPORTED_SENTENCE_TOKEN_LENGTH'])\n",
+    "\t\tlearning_rate = float(config['LEARNING_RATE'])\n",
+    "\t\teps = float(config['EPS'])\n",
+    "\t\tseed = int(config['SEED'])\n",
+    "\t\tbatch_size = int(config['BATCH_SIZE'])\n",
+    "\t\tepochs = int(config[\"EPOCHS\"])\n",
+    "\n",
+    "\t\t# folders\n",
+    "\t\tdataset_folder = Path(config[\"TRAIN_DIRECTORY\"]) / Path(config[\"datasource\"])\n",
+    "\t\tif not Path.exists(dataset_folder): \n",
+    "\t\t\tdataset_folder.mkdir(parents = True)\n",
+    "\t\tprint(f\"Base directory for model-related data: {str(dataset_folder)}\")\n",
+    "\t\tcheckpoint_folder = dataset_folder / Path(config[\"CHECKPOINT_DIRECTORY\"])\n",
+    "\t\tif not Path.exists(checkpoint_folder): \n",
+    "\t\t\tcheckpoint_folder.mkdir(parents = True)\n",
+    "\t\tprint(f\"Checkpoint directory: {str(checkpoint_folder)}\")\n",
+    "\n",
+    "\t\t# get device\n",
+    "\t\tprint(\"Checking devices...\")\n",
+    "\t\tdevice_str = \"cpu\"\n",
+    "\t\tif torch.cuda.is_available(): device_str = \"cuda\"\n",
+    "\t\tdevice = torch.device(device_str)\n",
+    "\n",
+    "\t\tprint(f\"Device for training: {device}\")\n",
+    "\n",
+    "\t\t# fix seed\n",
+    "\t\tprint(f\"Random seed: {seed}\")\n",
+    "\t\ttorch.manual_seed(seed)\n",
+    "\n",
+    "\t\t# get dataset\n",
+    "\t\tprint(\"Loading dataset...\")\n",
+    "\t\ttrain_ds, validation_ds, test_ds, tokenizer_source, tokenizer_target = DataSetLoader.get_dataset(config)\n",
+    "\n",
+    "\t\tprint(f\"Maximum token length found: {max_tokens}\")\n",
+    "\n",
+    "\t\t# data points printed are the amount of sentence pairs\n",
+    "\t\tprint(f\"Train dataset size: {len(train_ds)}\")\n",
+    "\t\tprint(f\"Validation dataset size: {len(validation_ds)}\")\n",
+    "\t\tprint(f\"Test dataset size: {len(test_ds)}\\n\")\n",
+    "\n",
+    "\t\t# print random example\n",
+    "\t\tprint(f\"Example data entry: {train_ds[621]}\\n\")\n",
+    "\n",
+    "\t\t# dataloader\n",
+    "\t\tprint(\"Creating dataloaders...\")\n",
+    "\t\ttrain_dataloader = DataLoader(train_ds, batch_size=batch_size, shuffle=True)\n",
+    "\t\tvalidation_dataloader = DataLoader(validation_ds, batch_size=1, shuffle=True)\n",
+    "\t\ttest_dataloader = DataLoader(test_ds, batch_size=1, shuffle=True)\n",
+    "\n",
+    "\t\tprint(\"Loading model\")\n",
+    "\t\t# TODO: make use of different configurations ?????\n",
+    "\t\tmodel = TransformerBuilder.build_transformer(tokenizer_source.get_vocab_size(), tokenizer_target.get_vocab_size(), max_tokens, max_tokens, False, True, config[\"MODEL_DIMENSIONS\"], config[\"NUM_ENCODER_BLOCKS\"], config[\"NUM_HEADS\"], config[\"DROPOUT\"]).to(device)\n",
+    "\n",
+    "\t\toptimizer = torch.optim.Adam(model.parameters(), learning_rate, eps = eps)\n",
+    "\n",
+    "\t\told_train_files = list(Path(checkpoint_folder).glob('*'))\n",
+    "\t\tif len(old_train_files) > 0:\n",
+    "\t\t\told_train_files.sort(reverse=True)\n",
+    "\t\t\told_train_filename = old_train_files[0]\n",
+    "\t\t\tprint(f\"Found latest model at: {old_train_filename}\")\n",
+    "\t\t\n",
+    "\t\t\tstate = torch.load(old_train_filename)\n",
+    "\t\t\tmodel.load_state_dict(state['model_states'])\n",
+    "\t\t\toptimizer.load_state_dict(state['optimizer_state'])\n",
+    "\t\t\tglobal_step = state['global_step']\n",
+    "\t\t\tepoch = state['epoch'] #to start at next epoch\n",
+    "\n",
+    "\t\t\tprint(f\"Successfully loaded existing state, at epoch {epoch}\")\n",
+    "\n",
+    "\t\treturn model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Github\\SUMMIT\\src\n",
       "=== SUMMIT Training Process ===\n",
       "\n",
       "Base directory for model-related data: train\\opus_books\n",
@@ -232,151 +334,20 @@
       "\n",
       "Creating dataloaders...\n",
       "Loading model\n",
-      "Transformer(\n",
-      "  (encoder): Encoder(\n",
-      "    (encoder_module_list): ModuleList(\n",
-      "      (0-5): 6 x EncoderBlock(\n",
-      "        (self_attention_layer): MultiHeadAttentionSegment(\n",
-      "          (w_q): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_k): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_v): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_o): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (feed_forward_layer): FeedForwardLayer(\n",
-      "          (linear_1): Linear(in_features=512, out_features=2048, bias=True)\n",
-      "          (linear_2): Linear(in_features=2048, out_features=512, bias=True)\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (add_and_norm_layers): ModuleList(\n",
-      "          (0-1): 2 x AddAndNormLayer(\n",
-      "            (dropout): Dropout(p=0.1, inplace=False)\n",
-      "            (normalization_layer): LayerNormalization()\n",
-      "          )\n",
-      "        )\n",
-      "      )\n",
-      "    )\n",
-      "    (normalization_layer): LayerNormalization()\n",
-      "  )\n",
-      "  (decoder): Decoder(\n",
-      "    (decoder_module_list): ModuleList(\n",
-      "      (0-5): 6 x DecoderBlock(\n",
-      "        (self_attention_layer): MultiHeadAttentionSegment(\n",
-      "          (w_q): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_k): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_v): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_o): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (cross_attention_layer): MultiHeadAttentionSegment(\n",
-      "          (w_q): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_k): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_v): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (w_o): Linear(in_features=512, out_features=512, bias=True)\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (feed_forward_layer): FeedForwardLayer(\n",
-      "          (linear_1): Linear(in_features=512, out_features=2048, bias=True)\n",
-      "          (linear_2): Linear(in_features=2048, out_features=512, bias=True)\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (add_and_norm_layers): ModuleList(\n",
-      "          (0-2): 3 x AddAndNormLayer(\n",
-      "            (dropout): Dropout(p=0.1, inplace=False)\n",
-      "            (normalization_layer): LayerNormalization()\n",
-      "          )\n",
-      "        )\n",
-      "      )\n",
-      "    )\n",
-      "    (normalization_layer): LayerNormalization()\n",
-      "  )\n",
-      "  (source_embedding_layer): InputEmbeddings(\n",
-      "    (embedding): Embedding(30000, 512)\n",
-      "  )\n",
-      "  (target_embedding_layer): InputEmbeddings(\n",
-      "    (embedding): Embedding(30000, 512)\n",
-      "  )\n",
-      "  (source_pe_layer): PositionalEncodings(\n",
-      "    (dropout): Dropout(p=0.1, inplace=False)\n",
-      "  )\n",
-      "  (target_pe_layer): PositionalEncodings(\n",
-      "    (dropout): Dropout(p=0.1, inplace=False)\n",
-      "  )\n",
-      "  (output_projection_layer): OutputProjectionLayerForCrossEntropyLoss(\n",
-      "    (linear_layer): Linear(in_features=512, out_features=30000, bias=True)\n",
-      "  )\n",
-      ")\n",
-      "Looking for old training states...\n",
       "Found latest model at: train\\opus_books\\checkpoints\\00\n",
-      "Successfully loaded existing state, now starting at epoch 5\n",
-      "Starting training at epoch 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "from train import DataSetLoader\n",
-    "from config import get_config\n",
-    "from transformer import Transformer\n",
-    "from transformer import TransformerBuilder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading raw dataset...\n",
-      "Creating tokenizers...\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\de.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Looking for tokenizer file: D:\\Github\\SUMMIT\\src\\train\\opus_books\\tokenize\\en.json\n",
-      "Found existing tokenizer file, reusing it!\n",
-      "Finding longest items...\n",
-      "Longest items found: de: 479, en: 466\n",
-      "Splitting dataset...\n"
+      "Successfully loaded existing state, at epoch 4\n"
      ]
     }
    ],
    "source": [
     "config = get_config()\n",
-    "train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)"
+    "#train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)\n",
+    "model = load_model(config)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m TransformerBuilder\u001b[38;5;241m.\u001b[39mbuild_transformer(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mtokenizer_source\u001b[38;5;241m.\u001b[39mget_vocab_size(), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer_target\u001b[38;5;241m.\u001b[39mget_vocab_size(), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_tokens, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_tokens, \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMODEL_DIMENSIONS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNUM_ENCODER_BLOCKS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNUM_HEADS\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDROPOUT\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "model = TransformerBuilder.build_transformer(self.tokenizer_source.get_vocab_size(), self.tokenizer_target.get_vocab_size(), self.max_tokens, self.max_tokens, False, True, self.config[\"MODEL_DIMENSIONS\"], self.config[\"NUM_ENCODER_BLOCKS\"], self.config[\"NUM_HEADS\"], self.config[\"DROPOUT\"]).to(self.device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
