--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import warnings\n",
     "import tokenizer\n",
+    "import tokenizers\n",
     "from pathlib import Path\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,52 +149,112 @@
    "source": [
     "config = get_config()\n",
     "#train_dataloader, validation_dataloader, test_dataloader, vocab_source, vocab_target = DataSetLoader.get_dataset(config)\n",
-    "model = load_model(config) \n"
+    "model = load_model(config) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Github\\SUMMIT\\src\\train\\opus_books\\checkpoints\\00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def load_batch():\n",
+    "    batch = next(iter(validation_dataloader)) # Loads the next iteration of the validation, goes in sequence, not in parallel\n",
+    "    encoder_input = batch[\"to_encoder\"]  # Gets the encoder-input of the item in the batch\n",
+    "    decoder_input = batch[\"to_decoder\"]\n",
+    "    encoder_mask = batch[\"mask_encoder\"] # Gets the mask of the item in the batch\n",
+    "    decoder_mask = batch[\"mask_decoder\"]\n",
+    "\n",
+    "    encoder_input_tokens = [vocab_source.id_to_token(index) for index in encoder_input[0].cpu().numpy()] #Convert Id's to tokens which are mapped to the dictionary\n",
+    "    decoder_input_tokens = [vocab_target.id_to_token(index) for index in decoder_input[0].cpu().numpy()]\n",
+    "\n",
+    "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\" \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ... load the greedy_decode, doing it with Markus' new code?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Do I need this?\n",
     "config = get_config()\n",
     "file_path = str(Path('.').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\n",
-    "print(file_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(file_path)\n",
+    "\n",
     "#Load pretrained weights\n",
-    "state = torch.load(file_path)"
+    "state = torch.load(file_path)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(state['model_state_dict'])"
+    "def mtx2df(m, max_row, max_col, row_tokens, col_tokens): # Converts attention matrix into Pandas Dataframe\n",
+    "    #m is the attention matrix, max_rows, and the tokens of the attention matrix / their positions. Done to more easily visualize data\n",
+    "    return pd.DataFrame(\n",
+    "        [\n",
+    "            (\n",
+    "                r, #iterating over all rows\n",
+    "                c, #iterating over all columns \n",
+    "                float(m[r, c]), #Gets the attention value at [r, c], is a number\n",
+    "                \"%.3d %s\" % (r, row_tokens[r] if len(row_tokens) > r else \"<blank>\"), #\"%.3d %s\" % formats number as a three-digit integer\n",
+    "                \"%.3d %s\" % (c, col_tokens[c] if len(col_tokens) > c else \"<blank>\"), #Retrieves the index if it exists, if it is out of range fills it with \"blank\"\n",
+    "            ) #row_tokens and col_tokens give a number\n",
+    "            for r in range(m.shape[0]) #.shape returns the shape of the matrix\n",
+    "            for c in range(m.shape[1]) #.shape returns the shape of the matrix\n",
+    "            if r < max_row and c < max_col # The tuple which has been created above is only added if r < max_row and c < max_col\n",
+    "        ],\n",
+    "        columns=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"], #defines column names for the Pandas DataFrame being created.\n",
+    "    )\n",
+    "\n",
+    "def get_attn_map(attn_type: str, layer: int, head: int): #Gets a specific attention type from a specified layer and a specified head\n",
+    "    if attn_type == \"encoder\":\n",
+    "        attn = model.encoder.layers[layer].self_attention_block.attention_scores # self attention_scores comes from calculate_attention in transformer\n",
+    "    elif attn_type == \"decoder\":\n",
+    "        attn = model.decoder.layers[layer].self_attention_block.attention_scores # self\n",
+    "    elif attn_type == \"encoder-decoder\":\n",
+    "        attn = model.decoder.layers[layer].cross_attention_block.attention_scores # cross\n",
+    "    return attn[0, head].data\n",
+    "    #Shape (batch_size, num_heads, query_len, key_len) Gets the first sample in the batch for inference and the specified attention head, .data to extract raw tensor values\n",
+    "\n",
+    "def attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len):\n",
+    "    df = mtx2df(get_attn_map(attn_type, layer, head), max_sentence_len, max_sentence_len, row_tokens, col_tokens) #Attention matrix, max_row, max_col, row_tokens, col_tokens\n",
+    "    #Creates dataframe representation of an attention map\n",
+    "\n",
+    "    return (alt.Chart(data=df).mark_rect().encode(  #df is the data we feed it, creates rects\n",
+    "            x=alt.X(\"col_token\", axis=alt.Axis(title=\"\")), # Horizontal axis represents tokens on the column side.\n",
+    "            y=alt.Y(\"row_token\", axis=alt.Axis(title=\"\")), # Vertical axis represents tokens on the row side.\n",
+    "            color=\"value\",\n",
+    "            tooltip=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
+    "        )  #Changes color intensity based on value, displays values when hovering over the rects\n",
+    "        #.title(f\"Layer {layer} Head {head}\")\n",
+    "        .properties(height=400, width=400, title=f\"Layer {layer} Head {head}\")\n",
+    "        .interactive()\n",
+    "    )\n",
+    "\n",
+    "def get_all_attention_maps(attn_type: str, layers: list[int], heads: list[int], row_tokens: list, col_tokens, max_sentence_len: int):\n",
+    "    charts = []\n",
+    "    for layer in layers:\n",
+    "        rowCharts = []\n",
+    "        for head in heads:\n",
+    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len))\n",
+    "        charts.append(alt.hconcat(*rowCharts))\n",
+    "    return alt.vconcat(*charts) #Attention of all heads and all layers that are given as the input"
    ]
   }
  ],
